# front_yew_base

./: Cargo.toml  Makefile.toml  README.md
src/: app.rs  lib.rs
src/utils/: router.rs
static/: .gitignore  package.json  tailwind.config.js
