[package]
name = "yew基础框架"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# 框架
yew = "0.19"
#路由
yew-router = { version="0.16"}

wasm-bindgen = "^0.2"

# 日志
log = "0.4"
wasm-logger = "0.2"

#工具类
gloo = "0.6"
thiserror = "1"

# 序列化
serde = {version = "1.0", features = ["derive"]}